fixed text alignment

--- a/tutorials/dezziena/css/style.css
+++ b/tutorials/dezziena/css/style.css
@@ -24,6 +24,7 @@ body {
     /* font-size 1.6rem is now the same as 16px */
     line-height: 1.6;
 }
+
 a {
     text-decoration: none;
     color: red;
@@ -53,7 +54,10 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: left;
+    text-align: justify;
+    text-align-last: center;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
     min-height: auto;
     max-width: 50vw;
     padding-bottom: 350px;
@@ -99,8 +103,8 @@ a {
 .body-type p {
     font-size: 1.75rem;
     line-height: 2.275rem;
-    font-family: "neue-haas-grotesk-display", sans-serif;
-    font-weight: 500;
+    font-family: "lft-etica", sans-serif;
+    font-weight: 300;
     font-style: normal;
 }
 
@@ -108,8 +112,8 @@ a {
 .first-paragraph p {
     font-size: 1.5rem;
     line-height: 2.04rem;
-    font-family: "neue-haas-grotesk-display", sans-serif;
-    font-weight: 500;
+    font-family: "lft-etica", sans-serif;
+    font-weight: 300;
     font-style: italic;
     max-width: 40vw;
 }
@@ -127,16 +131,16 @@ h1 {
     .body-type p {
         font-size: 1.3rem;
         line-height: 1.44rem;
-        font-family: "neue-haas-grotesk-display", sans-serif;
-        font-weight: 500;
+        font-family: "lft-etica", sans-serif;
+        font-weight: 300;
         font-style: normal;
     }
 
     .first-paragraph p {
         font-size: 1.3rem;
         line-height: 1.56rem;
-        font-family: "neue-haas-grotesk-display", sans-serif;
-        font-weight: 500;
+        font-family: "lft-etica", sans-serif;
+        font-weight: 300;
         font-style: italic;
     }
 
